# Medieval-Game

./: COMMIT_FILES.md  COMMIT_MESSAGES.md  Constants.hs  ENABLE_MUSIC_NOW.md  GUI_EXPLANATION.md  INSTALL_MUSIC.md  Main.hs  QUICK_MUSIC_SETUP.md  README.md  Rendering.hs  SOUND_SYSTEM.md  Types.hs  Utils.hs  download_sounds.py  download_sounds_auto.py  generate_real_sounds.py  medieval-siege.cabal  medieval-siege.cabal.backup  setup_music.sh
assets/music/: README.md
assets/sounds/: README.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Assets.hs  Config.hs  Constants.hs  GameLoop.hs  Main.hs  Types.hs
src/AI/: Director.hs  FSM.hs  ThreatAnalysis.hs
src/Audio/: AudioCore.hs  Music.hs  SoundEvents.hs
src/Input/: InputHandler.hs
src/Physics/: Collision.hs  PhysicsCore.hs
src/Rendering/: PixelArt.hs  RenderUI.hs  RenderWorld.hs
src/Systems/: AbilitySystem.hs  BossAbilities.hs  TowerSystem.hs  TrapSystem.hs  WaveSystem.hs
