cabal-version:      2.4
name:               medieval-siege
version:            0.1.0.0
license:            MIT
author:             Your Name
maintainer:         your.email@example.com
build-type:         Simple

executable siege
    main-is:          Main.hs
    build-depends:    base >=4.14 && <5,
                      gloss >=1.13,
                      containers >=0.6
    default-language: Haskell2010
    ghc-options:      -O2 -threaded -rtsopts